<resources>
    <string name="app_name">FlashLearn</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="default_web_client_id">382070999281-thkcs7ku9v3679k8ar60u6fhdlcpt1t6.apps.googleusercontent.com</string>
    <string-array name="language">
        <item name="select_english">Tiếng Anh</item>
        <item name="select_vietnamese">Tiếng Việt</item>
    </string-array>
    <string name="select_english">Tiếng Anh</string>
    <string name="select_vietnamese">Tiếng Việt</string>
    <string name="nav_home">Trang chủ</string>
    <string name="nav_create_card">Tạo một bộ flashcard</string>
    <string name="nav_set_edit">Chỉnh sửa một bộ flashcard</string>
    <string name="nav_add_card">Thêm flashcard</string>
    <string name="nav_edit_card">Sửa flashcard</string>
    <string name="nav_delete_card">Xóa flashcard</string>
    <string name="nav_rename_set_card">Đổi tên một bộ flashcard</string>
    <string name="nav_delete_set_card">Xóa một bộ flashcard</string>
    <string name="nav_setting">Cài đặt</string>
    <string name="nav_search">Tìm kiếm một bộ flashcard</string>
    <string name="nav_filter">Lọc theo chủ đề</string>
    <string name="nav_practice">Luyện tập</string>
    <string name="nav_share">Chia sẻ ứng dụng</string>
    <string name="nav_support">Hỗ trợ</string>
    <string name="nav_privacy_policy">Chính sách bảo mật</string>
    <string name="nav_question">Câu hỏi thường gặp</string>
    <string name="nav_sign_out">Đăng xuất</string>
    <string name="txt_overview">Tổng quan</string>
    <string name="txt_language">Ngôn ngữ</string>
    <string name="txt_dark_mode">Chế độ tối</string>
    <string name="txt_notice">Thông báo có thẻ cần ôn tập</string>
    <string name="txt_sub_notice">Hiển thị thông báo khi có thẻ cần ôn tập</string>
    <string name="txt_set_oder">Thiết lập thứ tự</string>
    <string name="txt_sub_set_oder">Thiết lập thứ tự theo ABC</string>
    <string name="txt_setting_review">Cài đặt ôn tập</string>
    <string name="txt_setting_review1">Chỉ hiển thị hình ảnh cho định nghĩa</string>
    <string name="txt_setting_sub_review1">Ấn văn bản định nghĩa cho thẻ có chứa hình ảnh trong khi ôn tập</string>
    <string name="txt_setting_review2">Hiển thị định nghĩa thẻ đầu tiên</string>
    <string name="txt_setting_sub_review2">Hiển thị định nghĩa thẻ đầu tiên khi thực hành</string>
    <string name="txt_mix_card">Xáo trộn thẻ</string>
    <string name="txt_card_round">Số lượng thẻ mỗi vòng</string>
    <string name="txt_sub_card_round">10 thẻ</string>
    <string name="txt_pre_oder_card">Đặt trước 5 thẻ</string>
    <string name="txt_sub_pre_oder_card">Sau khi nối tất cả các cặp thẻ, chỉ thêm 5 thẻ mới cho vòng tiếp theo</string>
    <string name="txt_review_audio">Ôn tập bằng âm thanh</string>
    <string name="txt_terms">Đọc thuật ngữ</string>
    <string name="txt_define">Đọc định nghĩa</string>
    <string name="txt_reading_speed">Tốc độ đọc</string>
    <string name="txt_sub_reading_speed">Bình thường</string>
    <string name="txt_backup">Sao lưu</string>
    <string name="txt_make_copy">Tạo bản sao</string>
    <string name="txt_restore">Khôi phục</string>
    <string name="txt_other">Khác</string>
    <string name="txt_terms_of_use">Điều khoản sử dụng</string>
    <string name="txt_privacy_policy">Chính sách bảo mật</string>
    <string name="txt_privacy_policy1">Cập nhật lần cuối: 9.5.2023</string>
    <string name="txt_privacy_policy2">Tại Flashcards World, chúng tôi tôn trọng quyền riêng tư của bạn và cam kết bảo vệ nó thông qua việc tuân thủ chính sách này. Chính sách này mô tả các loại thông tin chúng tôi có thể thu thập từ bạn hoặc bạn có thể cung cấp khi bạn sử dụng ứng dụng di động Flashcards World dành cho Android và các thông lệ của chúng tôi về việc thu thập, sử dụng, duy trì, bảo vệ và tiết lộ thông tin đó.</string>
    <string name="txt_privacy_policy3">Vui lòng đọc kỹ chính sách này để hiểu các chính sách và thực tiễn của chúng tôi liên quan đến thông tin của bạn cũng như cách chúng tôi sẽ xử lý thông tin đó. Bằng cách sử dụng Ứng dụng, bạn đồng ý với các điều khoản và điều kiện của Chính sách quyền riêng tư này. Chính sách này có thể thay đổi theo thời gian. Việc bạn tiếp tục sử dụng Ứng dụng sau khi chúng tôi thực hiện các thay đổi được coi là chấp nhận những thay đổi đó, vì vậy vui lòng kiểm tra chính sách định kỳ để biết các bản cập nhật.</string>
    <string name="txt_collect_info">Thông tin chúng tôi thu thập và cách chúng tôi thu thập thông tin đó</string>
    <string name="txt_collect_info1">Chúng tôi thu thập một số loại thông tin từ và về người dùng Ứng dụng của chúng tôi, bao gồm:</string>
    <string name="txt_collect_info2">Tên và địa chỉ email (tùy chọn): Nếu bạn chọn cung cấp thông tin đó, chúng tôi sẽ thu thập tên và địa chỉ email của bạn nhằm mục đích cung cấp cho bạn các dịch vụ và hỗ trợ được cá nhân hóa.</string>
    <string name="txt_using_info">Cách chúng tôi sử dụng thông tin của bạn</string>
    <string name="txt_using_info1">Chúng tôi sử dụng thông tin mà chúng tôi thu thập về bạn hoặc thông tin bạn cung cấp cho chúng tôi, bao gồm mọi thông tin cá nhân:</string>
    <string name="txt_using_info2">Để cung cấp cho bạn Ứng dụng và các dịch vụ của nó.</string>
    <string name="txt_using_info3">Để thông báo cho bạn về những thay đổi đối với Ứng dụng của chúng tôi hoặc bất kỳ sản phẩm hoặc dịch vụ nào chúng tôi cung cấp hoặc cung cấp thông qua Ứng dụng đó.</string>
    <string name="txt_using_info4">Để cho phép bạn tham gia các tính năng tương tác trên Ứng dụng của chúng tôi.</string>
    <string name="txt_using_info5">Để cung cấp hỗ trợ khách hàng và trả lời các câu hỏi của bạn.</string>
    <string name="txt_disclosure">Tiết lộ thông tin của bạn</string>
    <string name="txt_disclosure1">Chúng tôi không chia sẻ, bán hoặc tiết lộ thông tin cá nhân của bạn cho các mục đích khác ngoài những mục đích được nêu trong Chính sách quyền riêng tư này. Chúng tôi không chia sẻ thông tin cá nhân của bạn với bên thứ ba vì mục đích tiếp thị trực tiếp của họ.</string>
    <string name="txt_save_delete_data">Lưu giữ và xóa dữ liệu</string>
    <string name="txt_save_delete_data1">Dữ liệu của bạn sẽ được lưu giữ trong khoảng thời gian cần thiết để hoàn thành các mục đích thu thập dữ liệu và bạn có thể yêu cầu xóa dữ liệu của mình bất kỳ lúc nào.</string>
    <string name="txt_privacy_changes">Những thay đổi đối với chính sách quyền riêng tư của chúng tôi</string>
    <string name="txt_privacy_changes1">Chính sách của chúng tôi là đăng bất kỳ thay đổi nào chúng tôi thực hiện đối với chính sách bảo mật của mình trên trang này. Nếu chúng tôi thực hiện những thay đổi quan trọng về cách chúng tôi xử lý thông tin cá nhân của người dùng, chúng tôi sẽ thông báo cho bạn qua thông báo trên Ứng dụng. Ngày chính sách quyền riêng tư được sửa đổi lần cuối được xác định ở đầu trang. Bạn có trách nhiệm đảm bảo chúng tôi có địa chỉ email cập nhật, hoạt động và có thể gửi được cho bạn và định kỳ truy cập chính sách quyền riêng tư này để kiểm tra mọi thay đổi.</string>
    <string name="txt_contact_info">Thông tin liên hệ</string>
    <string name="txt_contact_info1">Để đặt câu hỏi hoặc nhận xét về chính sách quyền riêng tư này và các biện pháp bảo mật của chúng tôi, bạn có thể liên hệ với chúng tôi tại: flashcards@gmail.com</string>
    <string name="txt_contact_info2">Bằng cách sử dụng Ứng dụng, bạn biểu thị sự chấp nhận Chính sách quyền riêng tư này. Nếu bạn không đồng ý với Chính sách quyền riêng tư này, vui lòng không sử dụng Ứng dụng. Việc bạn tiếp tục sử dụng Ứng dụng sau khi đăng các thay đổi đối với Chính sách quyền riêng tư này sẽ được coi là bạn chấp nhận những thay đổi đó.</string>
    <string name="txt_introduce">Giới thiệu</string>
    <string name="txt_introduce1">Cách sử dụng cơ bản: (tạo bộ, thêm thẻ và xem lại chúng)</string>
    <string name="txt_introduce2">Sử dụng máy tính để viết thiệp</string>
    <string name="txt_introduce3">Sửa lỗi âm thanh và thiếu ngôn ngữ.</string>
    <string name="txt_introduce4">Chia sẻ học phần với người khác có ứng dụng</string>
    <string name="txt_introduce5">Tùy chọn đánh giá hoạt động như thế nào?</string>
    <string name="txt_introduce6">Thứ tự của các thẻ được xác định cụ thể như thế nào trong quá trình đánh giá?</string>
    <string name="txt_introduce7">Làm cách nào để sao lưu thẻ của tôi?</string>
    <string name="txt_introduce8">Tiết lộ định nghĩa đầu tiên trong quá trình đánh giá</string>
    <string name="txt_introduce9">Chỉ hình ảnh phù hợp với các điều khoản</string>
    <string name="txt_introduce10">Danh sách các tính năng cao cấp</string>
    <string name="txt_introduce11">Mẹo chung</string>
    <string name="txt_card_order">Thứ tự của các thẻ được xác định như thế nào trong quá trình đánh giá?</string>
    <string name="txt_card_order1">Theo mặc định, thứ tự của các lá bài sẽ được xác định bởi các yếu tố sau: lần cuối bạn xem lại thẻ là khi nào, bạn biết rõ về thẻ đó đến mức nào, bạn đã nhận được câu trả lời đúng cho thẻ đó bao nhiêu lần. Nếu bạn muốn xem lại các thẻ theo thứ tự cụ thể, bạn có thể tắt tùy chọn lặp lại cách nhau và chọn thứ tự của các thẻ.</string>
    <string name="txt_card_order2">Cũng có thể sắp xếp lại các thẻ từ màn hình quản lý thẻ, có thể truy cập từ màn hình thẻ, có menu tùy chọn ở trên cùng bên trái.</string>
    <string name="txt_backup_way">Làm cách nào để sao lưu thẻ của tôi?</string>
    <string name="txt_backup_way1">Nếu bạn đăng nhập thì thẻ của bạn sẽ được sao lưu tự động, xin lưu ý rằng hình ảnh chỉ được sao lưu với phiên bản pro.</string>
    <string name="txt_advanced_features">Tính năng nâng cao</string>
    <string name="txt_advanced_features1">Khả năng sao lưu hình ảnh, vì vậy thẻ có hình ảnh của bạn được an toàn.</string>
    <string name="txt_advanced_features2">Sử dụng phần đánh giá âm thanh ở chế độ nền và có thể nghe nhiều bộ chứ không chỉ một bộ duy nhất.</string>
    <string name="txt_advanced_features3">Tùy chỉnh đánh giá kết hợp: chọn loại thực hành bạn muốn có khi bắt đầu đánh giá.</string>
    <string name="txt_advanced_features4">Review bài vẽ: luyện vẽ đáp án</string>
    <string name="txt_advanced_features5">Tùy chọn ẩn/hiển thị định nghĩa hoặc thuật ngữ thẻ trong màn hình thẻ và hiển thị chúng bằng cách nhấp vào thẻ.</string>
    <string name="txt_general_tips">Mẹo chung</string>
    <string name="txt_general_tips1">Giữ cho bộ thẻ của bạn nhỏ, mỗi bộ 20-30 thẻ.</string>
    <string name="txt_general_tips2">Sắp xếp các bộ của bạn theo danh mục.</string>
    <string name="txt_general_tips3">Bật thông báo khi bạn có thẻ để xem xét.</string>
    <string name="txt_general_tips4">Hãy chăm chỉ học tập, thậm chí 10-15 phút mỗi ngày cũng có thể đạt được tiến bộ vượt bậc. (Chế độ kết hợp là cách nhanh chóng để xem lại thẻ của bạn)</string>
    <string name="toolbar_setting">Cài đặt</string>
    <string name="toolbar_home">Trang chủ</string>
    <string name="toolbar_security">Chính sách bảo mật</string>
    <string name="toolbar_question">Câu hỏi thường gặp</string>
    <string name="toolbar_support">Hỗ trợ</string>
    <string name="txt_select_topic">Hãy chọn chủ đề và điền tên</string>
    <string name="btn_continue">Tiếp tục</string>
    <string name="hint_question">Câu hỏi</string>
    <string name="hint_answer">Đáp án</string>
    <string name="btn_cancel">Hủy</string>
    <string name="btn_add">Thêm</string>
    <string name="btn_create">Tạo</string>
    <string name="btn_search">Tìm kiếm</string>
    <string name="txt_notification">Thông báo</string>
    <string name="btn_no">Không</string>
    <string name="btn_yes">Có</string>
    <string name="btn_reply">Trả lời</string>
    <string name="btn_save">Lưu</string>
    <string name="txt_add_card">Hãy chọn bộ flashcard mà bạn muốn thêm flashcard</string>
    <string name="txt_dialog_set_delete_card">Bạn có chắc chắn muốn xoá bộ flashcard này không?</string>
</resources>