<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controllers.SecurityActivity"
    android:id="@+id/drawerLayout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_editor_absoluteX="1dp"
        app:layout_editor_absoluteY="1dp"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Backgroud"
            android:orientation="vertical">

            <include
                layout="@layout/toolbar_secutity" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_privacy_policy"
                android:textSize="17sp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/pink0" />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                style="@style/BackgroudInit"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextColor"
                    android:layout_marginLeft="25dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/txt_privacy_policy1"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/BackgroudInit"
                android:layout_margin="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextColor"
                    android:layout_marginLeft="25dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/txt_privacy_policy2"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/BackgroudInit"
                android:layout_margin="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextColor"
                    android:layout_marginLeft="25dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/txt_privacy_policy3"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_collect_info"
                android:textSize="17sp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/pink0" />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                style="@style/BackgroudInit"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextColor"
                    android:layout_marginLeft="25dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/txt_collect_info1"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                style="@style/BackgroudInit"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TextColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/txt_collect_info2" />
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_using_info"
                android:textSize="17sp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/pink0" />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/BackgroudInit"
                android:layout_margin="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextColor"
                    android:layout_marginLeft="25dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/txt_using_info1"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/BackgroudInit"
                android:layout_margin="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextColor"
                    android:layout_marginLeft="25dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/txt_using_info2"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/BackgroudInit"
                android:layout_margin="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextColor"
                    android:layout_marginLeft="25dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/txt_using_info3"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/BackgroudInit"
                android:layout_margin="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextColor"
                    android:layout_marginLeft="25dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/txt_using_info4"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/BackgroudInit"
                android:layout_margin="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextColor"
                    android:layout_marginLeft="25dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/txt_using_info5"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_disclosure"
                android:textSize="17sp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/pink0" />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/BackgroudInit"
                android:layout_margin="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextColor"
                    android:layout_marginLeft="25dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/txt_disclosure1"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_save_delete_data"
                android:textSize="17sp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/pink0" />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/BackgroudInit"
                android:layout_margin="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextColor"
                    android:layout_marginLeft="25dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/txt_save_delete_data1"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_privacy_changes"
                android:textSize="17sp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/pink0" />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/BackgroudInit"
                android:layout_margin="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextColor"
                    android:layout_marginLeft="25dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/txt_privacy_changes1"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_contact_info"
                android:textSize="17sp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/pink0" />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                style="@style/BackgroudInit"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextColor"
                    android:layout_marginLeft="25dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/txt_contact_info1"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/BackgroudInit"
                android:layout_margin="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextColor"
                    android:layout_marginLeft="25dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/txt_contact_info2"/>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_gravity = "start">

        <include
            layout="@layout/nav_drawer"/>

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>