<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="15sp"
        android:paddingRight="15sp"
        android:paddingLeft="15sp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etQuestion"
                android:layout_width="0sp"
                android:layout_height="75sp"
                android:layout_weight="1"
                android:background="@drawable/black_rounded_border_4sp"
                android:gravity="center"
                android:hint="@string/hint_question"
                android:inputType="textMultiLine"
                android:padding="15sp"
                android:textSize="15sp" />

            <View
                android:layout_width="15dp"
                android:layout_height="0dp" />

            <EditText
                android:id="@+id/etAnswer"
                android:layout_width="0sp"
                android:layout_height="75sp"
                android:layout_weight="1"
                android:background="@drawable/black_rounded_border_4sp"
                android:gravity="center"
                android:hint="@string/hint_answer"
                android:inputType="textMultiLine"
                android:padding="15sp"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bCancel"
                android:layout_width="0sp"
                android:layout_height="48sp"
                android:layout_weight="1"
                android:background="@drawable/pink0_rounded_border_4sp"
                android:backgroundTint="@color/pink0"
                android:gravity="center"
                android:inputType="textMultiLine"
                android:text="@string/btn_cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="15dp"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/bAdd"
                android:layout_width="0sp"
                android:layout_height="48sp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/btn_add"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:backgroundTint="@color/pink0"
                android:background="@drawable/pink0_rounded_border_4sp"
                android:gravity="center"
                android:inputType="textMultiLine" />

            <View
                android:layout_width="15dp"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/bSave"
                android:layout_width="0sp"
                android:layout_height="48sp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/btn_save"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:backgroundTint="@color/pink0"
                android:background="@drawable/pink0_rounded_border_4sp"
                android:gravity="center"
                android:inputType="textMultiLine" />

        </LinearLayout>

        <ListView
            android:id="@+id/lvAlreadyCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"/>

    </LinearLayout>

</LinearLayout>
