<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    style="@style/Backgroud"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_dialog_set_delete_card"
            style="@style/TextColor"
            android:textSize="20sp"
            android:layout_marginBottom="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bNo"
                android:layout_width="0sp"
                android:layout_height="48sp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/btn_no"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:backgroundTint="@color/pink0"
                android:background="@drawable/pink0_rounded_border_4sp"
                android:gravity="center" />

            <View
                android:layout_width="15sp"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/bYes"
                android:layout_width="0sp"
                android:layout_height="48sp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/btn_yes"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:backgroundTint="@color/pink0"
                android:background="@drawable/pink0_rounded_border_4sp"
                android:gravity="center" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>